--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist2/bootstrap.min.css">
     <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 <body>
-    
-
+    <script src="dist2/bootstrap.bundle.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
