--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="dist2/bootstrap.min.css">
+    <title>NewProject</title>
     <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 <body>
-    <script src="dist2/bootstrap.bundle.min.js"></script>
+    <div class="wrapper">
+        <header class="header">
+        </header>
+        <main class="main">
+            <p>Hello World</p>
+        </main>
+        <footer class="footer"></footer>
+    </div>
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
